[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"


[workspace]

members = [
    "day1",
    "day2",
    "day3",
    "day4",
    "day5",
    "day6",
    "day7",
    "day8",
    "day9",
    "day10",
    "file_reader",
]

[lints.clippy]
all = "warn"
pedantic = "warn"
complexity = "warn"
correctness = "deny"
perf = "warn"
style = "warn"
